# trabajo_final_estadistica1_maestria

./: Descripcion_Proyecto.md  Plan_de_estudios_MEB_MCD_2021.md  README.md  main.py  plan_proyecto.md  pyproject.toml  slides_trabajo_final_estadistica2.md  trabajo_final_estadistica.ipynb
