[project]
name = "estadistica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ibis-framework[duckdb]>=11.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
